--- a/app/views/admin/portfolio/_form.html.erb
+++ b/app/views/admin/portfolio/_form.html.erb
@@ -64,6 +64,15 @@
                 <li id='image_<%= image_form.object.id %>'>
                   <%= image_form.hidden_field :id %>
                   <%= image_fu image_form.object, '135x135#c' %>
+                  <div class='textarea_wrapper_for_wym'>
+                    <% index = image_form.object_name.split('[').last.split(']').first.to_i %>
+                    <%= hidden_field_tag "#{f.object_name}[images_portfolio_entries_attributes][#{index}][id]",
+                      f.object.images_portfolio_entries[index].id %>
+                    <%= text_area_tag "#{f.object_name}[images_portfolio_entries_attributes][#{index}][link]",
+                      f.object.images_portfolio_entries[index].link,
+                        :id => "page_captions_#{index}",
+                        :class => 'page_caption' %>
+                  </div>
                 </li>
               <% end %>
               <li class='empty'>
