--- a/app/views/admin/portfolio/_form.html.erb
+++ b/app/views/admin/portfolio/_form.html.erb
@@ -67,9 +67,8 @@
                   <div class='textarea_wrapper_for_wym'>
                     <%
                       index = image_form.object_name.split('[').last.split(']').first.to_i
-                      name_prefix = "#{f.object_name}[images_portfolio_entries_attributes][#{index}]" 
-                    %>
-                    <%= hidden_field_tag "#{name_prefix}[image_id]", f.object.image_id_for_entry_index(index) %>
+                      name_prefix = "#{f.object_name}[images_attributes][#{index}]" 
+                    -%>
                     <%= text_area_tag "#{name_prefix}[link]", f.object.link_for_entry_index(index),
                         :id => "page_captions_#{index}",
                         :class => 'page_caption' %>
@@ -77,12 +76,11 @@
                 </li>
               <% end %>
               <li class='empty'>
-                <%= hidden_field_tag "portfolio_entry[images_attributes][#{@portfolio_entry.images.size}][id]" %>
-                <% name_prefix = "portfolio_entry[images_portfolio_entries_attributes][#{f.object.images_portfolio_entries.size}]" %>
-                <%= hidden_field_tag "#{name_prefix}[image_id]", "" %>
+                <% name_prefix = "portfolio_entry[images_attributes][#{f.object.images.size}]" -%>
+                <%= hidden_field_tag "#{name_prefix}[id]" %>
                 <%= text_area_tag "#{name_prefix}[link]", "",
                   :style => "display: none;",
-                  :id => "page_captions_#{f.object.images_portfolio_entries.size}",
+                  :id => "page_captions_#{f.object.images.size}",
                   :class => 'page_caption' %>
               </li>
             </ul>
