use content_for :javascripts instead of :scripts

--- a/app/views/portfolio/_slideshow.html.erb
+++ b/app/views/portfolio/_slideshow.html.erb
@@ -9,7 +9,7 @@
   end
 -%>
 
-<% content_for :scripts do -%>
+<% content_for :javascripts do -%>
 <script type="text/javascript">
 (function ($) {
   $(window).load(function () {
